hphp/hack/test/typecheck/this/php_lambda.php
<?hh

class Foo {
  public function foo(): void {
    $g = function($this) {
      $this->foo();
    };
  }
}
